--- a/redux-notes/package.json
+++ b/redux-notes/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "deep-freeze": "0.0.1",
+    "json-server": "^0.16.3",
     "redux-devtools-extension": "^2.13.8"
   }
 }
